# rocie-tools

./: .gitignore  README.md  procedures-index.json  skills-index.json
.github/workflows/: build-indexes.yml
elevenlabs-call-cli-tool/: tsconfig.json  tsup.config.ts
procedures/: local-business-scrape.md  price-comparison.md  procedure_template.md  product-review-research.md  public-web-research.md
scripts/: build-procedures-index.mjs  build-skills-index.mjs
skills/alpaca-market-data/: SKILL.md
skills/apple-calendar/: SKILL.md
skills/apple-notes/: SKILL.md
skills/apple-reminders/: SKILL.md
skills/aviation-stack-flight-tracker/: SKILL.md
skills/aviation-weather/: SKILL.md
skills/cloudflare-deploy/: SKILL.md
skills/discord/: SKILL.md
skills/docx/: SKILL.md
skills/fetch-page/: SKILL.md  _meta.json  fetch_page.mjs
skills/figma/: SKILL.md
skills/flight-search/: SKILL.md  _meta.json
skills/gog-google-workspace-cli-for-gmail-drive-sheets-docs/: SKILL.md
skills/google-ads/: SKILL.md
skills/google-calendar/: SKILL.md  pyvenv.cfg
skills/goplaces/: SKILL.md
skills/hubspot/: SKILL.md
skills/huggingface/: SKILL.md
skills/meta-ads/: SKILL.md
skills/mlx-whisper/: SKILL.md
skills/nano-banana-pro/: SKILL.md
skills/nest-devices/: SKILL.md  nest-webhook.py
skills/notion-knowledge-capture/: SKILL.md
tools/alpaca-market-data-cli-tool/: README.md  alpaca_market_data_cli.py  pyproject.toml
vapi-call-cli-tool/: tsup.config.ts
voice-call-cli-tool/: .env.example  README.md  package-lock.json  package.json  tsup.config.ts
(+58 files in other folders)
